# python-seatsurfing

./: .editorconfig  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-publish.yaml  build-python-package.yaml  ci-deploy-pypi.yaml  ci-deploy-testpypi.yaml  publish-package-testpypi.yaml  release.yaml
containers/seatsurfing/: docker-compose.yaml
seatsurfing/: __init__.py  booking.py
seatsurfing/common/: http_client.py
seatsurfing/models/: booking.py
src/seatsurfing/: __init__.py  authentication.py  main.py
src/seatsurfing/common/: http_client.py
src/seatsurfing/models/: authentication.py  booking.py  common.py
