[project]
name = "seatsurfing-pysdk"
version = "0.1.0"
authors = [
  { name="Zoltán Fraknói" },
]
description = "Python module to interface with Seatsurfing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Vogete/seatsurfing-pysdk"

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
