[project]
name = "python-seatsurfing"
version = "0.1.3"
authors = [{ name = "Zoltán Fraknói" }]
description = "Python client to interface with Seatsurfing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Vogete/python-seatsurfing"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.setuptools.packages.find]
include = ["seatsurfing*"]
